# ComfyUI-translate-offline

./: README.md  __init__.py  pyproject.toml  requirements.txt  test_cache.db
.github/workflows/: publish.yml
application/: __init__.py  translation_usecase.py
domain/: translation_entity.py  translation_service.py
infrastructure/: __init__.py  cache_service.py  di_container.py  nltk_sentence_splitter.py
infrastructure/adapters/: __init__.py  onnx_translator_adapter.py
presentation/nodes/: __init__.py  clip_translate_node.py  prompt_translate_node.py
